--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/service-worker": "~12.0.4",
     "angular-svg-round-progressbar": "^7.0.0",
     "bootstrap": "^5.0.2",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
